Error on line 43
Incorrect code to get json

--- a/makeGraph.html
+++ b/makeGraph.html
@@ -40,7 +40,8 @@ function chrono_chart(chart_dom_id, json_url) {
 	this.current_y_at_x = {};
 	this.curent_year_keys = [];
 	this.json_data = [];
-	 $.getJSON('testData.geojson', function(data); 
+	 $.getJSON('testData.geojson', function(data) {
+	 }
 	this.chart = null;
 	this.get_api_dataDone = function(data){
 		this.json_data = data;
