Adds jquery in head

--- a/makeChart.html
+++ b/makeChart.html
@@ -6,8 +6,13 @@
 	<meta name="viewport" width="device-width, initial-scale=1.0">
 	<title>Make a graph with data from Open Context</title>
 	
+	<!-- loads jquery for AJAX requests -->
+	<script src= "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" ></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js" ></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.js" ></script>
+	
 	<!-- loads chart script and data -->
-	<script type= "text/javascript" src= "https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.bundle.min.js" ></script>
+	<script src= "https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.bundle.min.js" ></script>
 	<script src = "/datavis/js/chrono-chart.js" ></script>
 	
 </head>
