--- a/makeChart.html
+++ b/makeChart.html
@@ -22,7 +22,7 @@
 	
 	<script>
 	var ctx = document.getElementById("chrono-chart");
-    var chrono = new chrono_chart("chrono-chart", "https://opencontext.org/subjects-search/United+States.json?chart=1&proj=52-digital-index-of-north-american-archaeology-dinaa&linked=dinaa-cross-ref");
+    var chrono = new chrono_chart("chrono-chart", "https://opencontext.org/subjects-search/United+States.json");
     chrono.initialize();
 	</script>
 
