--- a/makeChart.html
+++ b/makeChart.html
@@ -11,6 +11,9 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js" ></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.js" ></script>
 	
+	<!-- loads numeric styling -->
+	<script src="/datavis/js/numeric-styling.js" ></script>
+	
 	<!-- loads chart script and data -->
 	<script src= "https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.bundle.min.js" ></script>
 	<script src = "/datavis/js/chrono-chart.js" ></script>
