Changed graph div to "canvas"

--- a/makeChart.html
+++ b/makeChart.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-	<div id="chrono-chart" style="display: block; width: 763px; height: 381px;" width="763" height="381"></div>
+	<canvas id="chrono-chart">style="display: block; width: 763px; height: 381px;" width="763" height="381"></canvas>
 	
 	<script>
 	var ctx = document.getElementById("chrono-chart");
