--- a/makeChart.html
+++ b/makeChart.html
@@ -33,10 +33,29 @@
 	</script>
 
 <!-- This is where filter will go -->
-<div class="container-fluid" style="margin-top:5%;">
+<div class="well" style="margin-top:5%; margin-bottom:10%;">
 	<h3>Visualization Filters</h3>
+	<div class="row" style="margin-top: 10%">
+		<div class="col-xs-2 text-right">
+			<label for="exclude_after">Exclude Start After</label>
+		</div>
+		<div class="col-xs-2">
+    			<input type="text" class="form-control" id="exclude_after" placeholder="" />
+  		</div>
+		<div class="col-xs-2">
+		</div>
+		<div class="col-xs-2 text-right">
+			<label for="exclude_before">Exclude End Before</label>
+		</div>
+		<div class="col-xs-2">
+    			<input type="text" class="form-control" id="exclude_before" placeholder="">
+  		</div>
+		<div class="col-xs-2">
+  			<button type="submit" class="btn btn-default" onclick="chrono.exclude_dates(); return false;">Exclude by Date(s)</button>
+		</div>
+	</div>
   	<div class="row">
-		<div class="col-xs-3">
+		<div class="col-xs-3 text-right">
 			<label for="exclude_id">Exclude facet (id / url)</label>
 		</div>
 		<div class="col-xs-5">
@@ -49,25 +68,6 @@
 		</div>
 		<div class="col-xs-2">
   			<button type="submit" class="btn btn-default" onclick="chrono.exclude(); return false;">Add to Exclude List</button>
-		</div>
-	</div>
-	<div class="row" style="margin-top: 10%">
-		<div class="col-xs-2">
-			<label for="exclude_after">Exclude Start After</label>
-		</div>
-		<div class="col-xs-2">
-    			<input type="text" class="form-control" id="exclude_after" placeholder="" />
-  		</div>
-		<div class="col-xs-2">
-		</div>
-		<div class="col-xs-2">
-			<label for="exclude_before">Exclude End Before</label>
-		</div>
-		<div class="col-xs-2">
-    			<input type="text" class="form-control" id="exclude_before" placeholder="">
-  		</div>
-		<div class="col-xs-2">
-  			<button type="submit" class="btn btn-default" onclick="chrono.exclude_dates(); return false;">Exclude by Date(s)</button>
 		</div>
 	</div>
 	
