--- a/makeChart.html
+++ b/makeChart.html
@@ -54,11 +54,11 @@
   			<button type="submit" class="btn btn-default" onclick="chrono.exclude_dates(); return false;">Exclude by Date(s)</button>
 		</div>
 	</div>
-  	<div class="row">
-		<div class="col-xs-3 text-right">
+  	<div class="row" style="margin-top:5%;">
+		<div class="col-xs-2 text-right">
 			<label for="exclude_id">Exclude facet (id / url)</label>
 		</div>
-		<div class="col-xs-5">
+		<div class="col-xs-6">
     			<input type="text" class="form-control" id="exclude_id" placeholder="Add ID for chronology facet to ignore" />
 			<h5>Excluded Facet IDs</h5>
 			<ul id="excluded_ids" class="small">
