--- a/makeChart.html
+++ b/makeChart.html
@@ -27,9 +27,26 @@
 	<canvas id="chrono-chart"></canvas>
 	
 	<script>
+	function getParameter(theParameter) { 
+		  var params = window.location.search.substr(1).split('&');
+
+		  for (var i = 0; i < params.length; i++) {
+		    var p=params[i].split('=');
+			if (p[0] == theParameter) {
+			  return decodeURIComponent(p[1]);
+			}
+		  }
+		  return false;
+	}	
+		
+		
 	var ctx = document.getElementById("chrono-chart");
-    var chrono = new chrono_chart("chrono-chart", "https://opencontext.org/subjects-search/United+States.json");
-    chrono.initialize();
+	var url = getParameter('oc-search');
+        if(url == false){
+		var url = 'https://opencontext.org/subjects-search/United+States.json';
+	}
+   	var chrono = new chrono_chart("chrono-chart", url);
+    	chrono.initialize();
 	</script>
 
 <!-- This is where filter will go -->
@@ -70,7 +87,19 @@
   			<button type="submit" class="btn btn-default" onclick="chrono.exclude(); return false;">Add to Exclude List</button>
 		</div>
 	</div>
-	
+	<div class="row" style="margin-top:5%;">
+		<div class="col-xs-2 text-right">
+			<label for="oc_url">Open Context Search URL</label>
+		</div>
+		<div class="col-xs-6">
+    			<input type="text" class="form-control" id="oc_url" placeholder="Add a data-record search url" />
+  		</div>
+		<div class="col-xs-2">
+		</div>
+		<div class="col-xs-2">
+  			<button type="submit" class="btn btn-default" onclick="chrono.reload();">Use New URL</button>
+		</div>
+	</div>
 	<!-- 
         Disable, doesn't work
 	<h5>Reset the Visualization</h5>
